Google Tag Managerの追加と診断リンクの更新

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="あなたの隠れリスクとお金の性格がたった2分でわかる無料診断サービス" />
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-KZGT7CGS');</script>
+  <!-- End Google Tag Manager -->
   <title>未来のお金計画NAVI | あなたのお金の未来をクリアに</title>
   <!-- Google Fontsの読み込み -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +21,10 @@
   <link rel="stylesheet" href="style.css?v=20250501" />
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KZGT7CGS"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <header>
     <div class="header-container">
       <h1><i class="fas fa-chart-line"></i> 未来のお金計画NAVI</h1>
@@ -39,10 +50,10 @@
           </div>
         </div>
         <div class="cta-buttons">
-          <a href="#type-diagnosis" class="cta-button cta-type">
+          <a href="https://hige-money.com/personal-type" class="cta-button cta-type">
             <i class="fas fa-user-check"></i> タイプ診断をする（無料）
           </a>
-          <a href="#risk-diagnosis" class="cta-button cta-risk">
+          <a href="https://hige-money.com/personal-risk" class="cta-button cta-risk">
             <i class="fas fa-shield-alt"></i> リスク診断をする（無料）
           </a>
         </div>
@@ -75,7 +86,7 @@
             <li><i class="fas fa-check-circle"></i> あなたに合った投資スタイルを発見</li>
             <li><i class="fas fa-check-circle"></i> 苦手な金銭管理の克服法をアドバイス</li>
           </ul>
-          <a href="https://marky808.github.io/-personal-type-diagnosis/" class="diagnosis-button">
+          <a href="https://hige-money.com/personal-type" class="diagnosis-button">
             タイプ診断をする（無料） <i class="fas fa-arrow-right"></i>
           </a>
         </div>
@@ -93,7 +104,7 @@
             <li><i class="fas fa-check-circle"></i> ライフイベントごとの対策を提案</li>
             <li><i class="fas fa-check-circle"></i> リスク対策の優先順位を明確化</li>
           </ul>
-          <a href="https://marky808.github.io/personal-risk-diagnosi/" class="diagnosis-button">
+          <a href="https://hige-money.com/personal-risk" class="diagnosis-button">
             リスク診断をする（無料） <i class="fas fa-arrow-right"></i>
           </a>
         </div>
@@ -136,7 +147,7 @@
               </div>
             </div>
             <p class="jp-wrap">年金だけでは<wbr>足りない老後の生活費。<br>今から準備しないと<wbr>手遅れに…</p>
-            <a href="#risk-diagnosis" class="worry-link-btn red">
+            <a href="https://hige-money.com/personal-risk" class="worry-link-btn red">
               <i class="fas fa-shield-alt"></i> リスク診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -153,7 +164,7 @@
               </div>
             </div>
             <p class="jp-wrap">銀行に預けているだけで<wbr>お金の価値が<br>どんどん減っていく…</p>
-            <a href="#type-diagnosis" class="worry-link-btn orange">
+            <a href="https://hige-money.com/personal-type" class="worry-link-btn orange">
               <i class="fas fa-user-check"></i> タイプ診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -170,7 +181,7 @@
               </div>
             </div>
             <p class="jp-wrap">いつ起きるかわからない<wbr>健康リスク。<br>備えがないと<wbr>家計が破綻も…</p>
-            <a href="#risk-diagnosis" class="worry-link-btn purple">
+            <a href="https://hige-money.com/personal-risk" class="worry-link-btn purple">
               <i class="fas fa-shield-alt"></i> リスク診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -187,7 +198,7 @@
               </div>
             </div>
             <p class="jp-wrap">大学までの教育費は<wbr>約1,000万円。<br>子どもの夢を<wbr>諦めさせたくない…</p>
-            <a href="#risk-diagnosis" class="worry-link-btn blue">
+            <a href="https://hige-money.com/personal-risk" class="worry-link-btn blue">
               <i class="fas fa-shield-alt"></i> リスク診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -204,7 +215,7 @@
               </div>
             </div>
             <p class="jp-wrap">長期間の住宅ローン、<br>金利上昇や収入減で<wbr>返せなくなったら…</p>
-            <a href="#type-diagnosis" class="worry-link-btn green">
+            <a href="https://hige-money.com/personal-type" class="worry-link-btn green">
               <i class="fas fa-user-check"></i> タイプ診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -221,7 +232,7 @@
               </div>
             </div>
             <p class="jp-wrap">突然始まる親の介護。<br>費用も時間も想像以上に<wbr>大きな負担に…</p>
-            <a href="#risk-diagnosis" class="worry-link-btn darkred">
+            <a href="https://hige-money.com/personal-risk" class="worry-link-btn darkred">
               <i class="fas fa-shield-alt"></i> リスク診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -238,7 +249,7 @@
               </div>
             </div>
             <p class="jp-wrap">低金利時代、<wbr>銀行に預けても増えない。<br>資産運用の方法が<wbr>わからない…</p>
-            <a href="#type-diagnosis" class="worry-link-btn yellow">
+            <a href="https://hige-money.com/personal-type" class="worry-link-btn yellow">
               <i class="fas fa-user-check"></i> タイプ診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -255,7 +266,7 @@
               </div>
             </div>
             <p class="jp-wrap">保険の種類が多すぎて選べない。<br>本当に必要な保障が<wbr>わからない…</p>
-            <a href="#risk-diagnosis" class="worry-link-btn teal">
+            <a href="https://hige-money.com/personal-risk" class="worry-link-btn teal">
               <i class="fas fa-shield-alt"></i> リスク診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -270,10 +281,10 @@
       <div class="worry-action">
         <p class="worry-lead">これらの不安を放置していると、<span class="highlight-red">将来取り返しのつかない事態</span>になるかもしれません</p>
         <div class="cta-buttons">
-          <a href="#type-diagnosis" class="cta-button cta-type">
+          <a href="https://hige-money.com/personal-type" class="cta-button cta-type">
             <i class="fas fa-user-check"></i> タイプ診断をする<br><span class="free-text">（無料）</span>
           </a>
-          <a href="#risk-diagnosis" class="cta-button cta-risk">
+          <a href="https://hige-money.com/personal-risk" class="cta-button cta-risk">
             <i class="fas fa-shield-alt"></i> リスク診断をする<br><span class="free-text">（無料）</span>
           </a>
         </div>
@@ -418,10 +429,10 @@
       </div>
       <p class="section-subtitle">たった2分の診断で<wbr>あなたのお金の未来が<wbr>見えてきます</p>
       <div class="cta-buttons final-cta">
-        <a href="#type-diagnosis" class="cta-button cta-type">
+        <a href="https://hige-money.com/personal-type" class="cta-button cta-type">
           <i class="fas fa-user-check"></i> タイプ診断をする<br><span class="free-text">（無料）</span>
         </a>
-        <a href="#risk-diagnosis" class="cta-button cta-risk">
+        <a href="https://hige-money.com/personal-risk" class="cta-button cta-risk">
           <i class="fas fa-shield-alt"></i> リスク診断をする<br><span class="free-text">（無料）</span>
         </a>
       </div>
