--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
           </div>
         </div>
         <div class="cta-buttons">
-          <a href="https://hige-money.com/personal-type" class="cta-button cta-type">
+          <a href="personal-type/index.html" class="cta-button cta-type">
             <i class="fas fa-user-check"></i> タイプ診断をする（無料）
           </a>
-          <a href="https://hige-money.com/personal-risk" class="cta-button cta-risk">
+          <a href="personal-risk/index.html" class="cta-button cta-risk">
             <i class="fas fa-shield-alt"></i> リスク診断をする（無料）
           </a>
         </div>
@@ -86,7 +86,7 @@
             <li><i class="fas fa-check-circle"></i> あなたに合った投資スタイルを発見</li>
             <li><i class="fas fa-check-circle"></i> 苦手な金銭管理の克服法をアドバイス</li>
           </ul>
-          <a href="https://hige-money.com/personal-type" class="diagnosis-button">
+          <a href="personal-type/index.html" class="diagnosis-button">
             タイプ診断をする（無料） <i class="fas fa-arrow-right"></i>
           </a>
         </div>
@@ -104,7 +104,7 @@
             <li><i class="fas fa-check-circle"></i> ライフイベントごとの対策を提案</li>
             <li><i class="fas fa-check-circle"></i> リスク対策の優先順位を明確化</li>
           </ul>
-          <a href="https://hige-money.com/personal-risk" class="diagnosis-button">
+          <a href="personal-risk/index.html" class="diagnosis-button">
             リスク診断をする（無料） <i class="fas fa-arrow-right"></i>
           </a>
         </div>
@@ -147,7 +147,7 @@
               </div>
             </div>
             <p class="jp-wrap">年金だけでは<wbr>足りない老後の生活費。<br>今から準備しないと<wbr>手遅れに…</p>
-            <a href="https://hige-money.com/personal-risk" class="worry-link-btn red">
+            <a href="personal-risk/index.html" class="worry-link-btn red">
               <i class="fas fa-shield-alt"></i> リスク診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -164,7 +164,7 @@
               </div>
             </div>
             <p class="jp-wrap">銀行に預けているだけで<wbr>お金の価値が<br>どんどん減っていく…</p>
-            <a href="https://hige-money.com/personal-type" class="worry-link-btn orange">
+            <a href="personal-type/index.html" class="worry-link-btn orange">
               <i class="fas fa-user-check"></i> タイプ診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -181,7 +181,7 @@
               </div>
             </div>
             <p class="jp-wrap">いつ起きるかわからない<wbr>健康リスク。<br>備えがないと<wbr>家計が破綻も…</p>
-            <a href="https://hige-money.com/personal-risk" class="worry-link-btn purple">
+            <a href="personal-risk/index.html" class="worry-link-btn purple">
               <i class="fas fa-shield-alt"></i> リスク診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -198,7 +198,7 @@
               </div>
             </div>
             <p class="jp-wrap">大学までの教育費は<wbr>約1,000万円。<br>子どもの夢を<wbr>諦めさせたくない…</p>
-            <a href="https://hige-money.com/personal-risk" class="worry-link-btn blue">
+            <a href="personal-risk/index.html" class="worry-link-btn blue">
               <i class="fas fa-shield-alt"></i> リスク診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -215,7 +215,7 @@
               </div>
             </div>
             <p class="jp-wrap">長期間の住宅ローン、<br>金利上昇や収入減で<wbr>返せなくなったら…</p>
-            <a href="https://hige-money.com/personal-type" class="worry-link-btn green">
+            <a href="personal-type/index.html" class="worry-link-btn green">
               <i class="fas fa-user-check"></i> タイプ診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -232,7 +232,7 @@
               </div>
             </div>
             <p class="jp-wrap">突然始まる親の介護。<br>費用も時間も想像以上に<wbr>大きな負担に…</p>
-            <a href="https://hige-money.com/personal-risk" class="worry-link-btn darkred">
+            <a href="personal-risk/index.html" class="worry-link-btn darkred">
               <i class="fas fa-shield-alt"></i> リスク診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -249,7 +249,7 @@
               </div>
             </div>
             <p class="jp-wrap">低金利時代、<wbr>銀行に預けても増えない。<br>資産運用の方法が<wbr>わからない…</p>
-            <a href="https://hige-money.com/personal-type" class="worry-link-btn yellow">
+            <a href="personal-type/index.html" class="worry-link-btn yellow">
               <i class="fas fa-user-check"></i> タイプ診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -266,7 +266,7 @@
               </div>
             </div>
             <p class="jp-wrap">保険の種類が多すぎて選べない。<br>本当に必要な保障が<wbr>わからない…</p>
-            <a href="https://hige-money.com/personal-risk" class="worry-link-btn teal">
+            <a href="personal-risk/index.html" class="worry-link-btn teal">
               <i class="fas fa-shield-alt"></i> リスク診断をする<br><span class="free-text">（無料）</span>
             </a>
           </div>
@@ -281,10 +281,10 @@
       <div class="worry-action">
         <p class="worry-lead">これらの不安を放置していると、<span class="highlight-red">将来取り返しのつかない事態</span>になるかもしれません</p>
         <div class="cta-buttons">
-          <a href="https://hige-money.com/personal-type" class="cta-button cta-type">
+          <a href="personal-type/index.html" class="cta-button cta-type">
             <i class="fas fa-user-check"></i> タイプ診断をする<br><span class="free-text">（無料）</span>
           </a>
-          <a href="https://hige-money.com/personal-risk" class="cta-button cta-risk">
+          <a href="personal-risk/index.html" class="cta-button cta-risk">
             <i class="fas fa-shield-alt"></i> リスク診断をする<br><span class="free-text">（無料）</span>
           </a>
         </div>
@@ -429,10 +429,10 @@
       </div>
       <p class="section-subtitle">たった2分の診断で<wbr>あなたのお金の未来が<wbr>見えてきます</p>
       <div class="cta-buttons final-cta">
-        <a href="https://hige-money.com/personal-type" class="cta-button cta-type">
+        <a href="personal-type/index.html" class="cta-button cta-type">
           <i class="fas fa-user-check"></i> タイプ診断をする<br><span class="free-text">（無料）</span>
         </a>
-        <a href="https://hige-money.com/personal-risk" class="cta-button cta-risk">
+        <a href="personal-risk/index.html" class="cta-button cta-risk">
           <i class="fas fa-shield-alt"></i> リスク診断をする<br><span class="free-text">（無料）</span>
         </a>
       </div>
