LINE友達登録ボタンのリンクを更新

--- a/personal-type/line-register.html
+++ b/personal-type/line-register.html
@@ -178,7 +178,7 @@
       <img src="./images/hige-qr.png" alt="LINE公式アカウントQRコード" class="qr-code">
     </div>
     
-    <a href="https://line.me/R/ti/p/@money_adviserjp" target="_blank" class="line-button" id="lineAddButton">
+    <a href="https://line.me/R/ti/p/@427cbszb" target="_blank" class="line-button" id="lineAddButton">
       <i class="fab fa-line"></i> LINE友達登録はこちら
     </a>
     <button id="lineCompleteButton" class="line-button complete-button">
