LINE友達登録フローの改善と関連リンクの更新

--- a/personal-type/line-register.html
+++ b/personal-type/line-register.html
@@ -156,6 +156,7 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
+  <!-- このファイルは1画面完結型フローに統一のため、今後は直接参照されません。必要に応じて削除・アーカイブしてください -->
   <div class="line-container">
     <i class="fab fa-line line-icon"></i>
     <h1>あと一歩！</h1>
