--- a/personal-type/result.html
+++ b/personal-type/result.html
@@ -312,7 +312,7 @@
       <div class="investment-items" id="investmentItems"></div>
     </div>
     
-    <a href="https://line.me/R/ti/p/@money_adviserjp" target="_blank" class="cta-button">
+    <a href="https://line.me/R/ti/p/@427cbszb" target="_blank" class="cta-button">
       <i class="fab fa-line"></i>LINEに戻る
     </a>
   </div>
